[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/towerButton.gd" type="Script" id=1]
[ext_resource path="res://Sprites/medievalStructure_22.png" type="Texture" id=2]
[ext_resource path="res://Sprites/UI/red_panel.png" type="Texture" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.407843, 0.407843, 0.407843, 0.619608 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3

[node name="towerButton" type="TextureButton"]
margin_right = 64.0
margin_bottom = 64.0
toggle_mode = true
button_mask = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="keyLabel" type="Label" parent="."]
margin_left = 49.7682
margin_top = 43.3414
margin_right = 60.7682
margin_bottom = 58.3414
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"

[node name="Node2D" type="Node2D" parent="."]
z_index = 2
__meta__ = {
"_edit_lock_": true
}

[node name="disabledPanel" type="Panel" parent="Node2D"]
margin_right = 64.0
margin_bottom = 64.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 32, 32 )
z_index = 1
texture = ExtResource( 2 )
region_rect = Rect2( 1216, 320, 64, 64 )
__meta__ = {
"_edit_lock_": true
}

[node name="background" type="Sprite" parent="."]
visible = false
position = Vector2( 32.1905, 31.5365 )
scale = Vector2( 0.680459, 0.680459 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -103.0
margin_top = -128.0
margin_right = 167.0
margin_bottom = -3.0
custom_styles/normal = SubResource( 2 )
text = "			"
align = 1
[connection signal="mouse_entered" from="." to="." method="_on_towerButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_towerButton_mouse_exited"]
